refactor: improve code formatting and remove deprecated comments across multiple classes